--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss",
+              {"input":"src/myTheme.css"},
               "./node_modules/@material/typography/dist/mdc.typography.min.css"
             ],
             "scripts": []
@@ -95,8 +94,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              {"input":"src/myTheme.css"}
             ],
             "scripts": []
           }
@@ -125,6 +123,10 @@
               "devServerTarget": "dog-adoption:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
