--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
     "@material/typography": "^3.1.0",
+    "angular": "^1.7.8",
+    "angular-cli-ghpages": "^0.6.0",
+    "firebase": "^7.0.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
