--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
     "@angular/core": "~8.2.7",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.2.7",
     "@angular/material": "^8.2.0",
     "@angular/platform-browser": "~8.2.7",
@@ -24,6 +25,7 @@
     "@material/typography": "^3.1.0",
     "angular": "^1.7.8",
     "angular-cli-ghpages": "^0.6.0",
+    "angularfire2": "^5.2.1",
     "firebase": "^7.0.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
