--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng build --prod --base-href https://sofialeon.github.io/dog-adoption/ && angular-cli-ghpages --branch gh-pages"
   },
   "private": true,
   "dependencies": {
@@ -53,4 +54,7 @@
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   }
+
+
+
 }
